--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,5 +5,5 @@ RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-# Rewrite everything else to index.php to allow html5 state links
+# Rewrite everything else to index.html to allow html5 state links
 RewriteRule ^ index.html [L]
